--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@zenmate/stats",
+  "name": "@phil-r/stats",
   "version": "1.0.2",
   "license": "MIT",
-  "author": "Phil Rukin <phil@zenmate.com>",
+  "author": "Phil Rukin <philipp@rukin.me>",
   "description": "Request statistics middleware",
   "main": "index.js",
   "keywords": [
@@ -13,13 +13,13 @@
     "http"
   ],
   "bugs": {
-    "url": "https://github.com/zenmate/stats/issues"
+    "url": "https://github.com/phil-r/stats/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zenmate/stats.git"
+    "url": "git+https://github.com/phil-r/stats.git"
   },
-  "homepage": "https://github.com/zenmate/stats#readme",
+  "homepage": "https://github.com/phil-r/stats#readme",
   "scripts": {
     "test": "npm run lint",
     "lint": "eslint --ignore-path .gitignore **/*.js"
