--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/phil-r/stats#readme",
   "scripts": {
-    "test": "npm run lint",
+    "test": "npm run lint && npm run ava",
+    "ava": "ava",
     "lint": "eslint --ignore-path .gitignore **/*.js"
   },
   "husky": {
@@ -39,11 +40,13 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "ava": "^1.4.1",
     "eslint": "^5.6.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.0",
     "husky": "^2.3.0",
     "prettier": "^1.17.1",
-    "pretty-quick": "^1.8.0"
+    "pretty-quick": "^1.8.0",
+    "supertest": "^4.0.2"
   }
 }
