--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@phil-r/stats",
   "version": "1.4.0",
   "license": "MIT",
-  "author": "Phil Rukin <philipp@rukin.me>",
+  "author": "Phil Rukin <philipp@rukin.me> (https://rukin.me)",
   "description": "Request statistics middleware",
   "main": "index.js",
   "keywords": [
