--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phil-r/stats",
-  "version": "1.4.1-test",
+  "version": "1.4.1",
   "license": "MIT",
   "author": "Phil Rukin <philipp@rukin.me> (https://rukin.me)",
   "description": "Request statistics middleware",
