--- a/package.json
+++ b/package.json
@@ -29,12 +29,8 @@
   "scripts": {
     "test": "npm run lint && npm run ava",
     "ava": "nyc --reporter=lcov --reporter=text ava",
-    "lint": "eslint --ignore-path .gitignore **/*.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+    "lint": "eslint --ignore-path .gitignore **/*.js",
+    "prepare": "husky install"
   },
   "prettier": {
     "singleQuote": true
@@ -42,17 +38,17 @@
   "dependencies": {
     "on-headers": "^1.0.1",
     "pretty-time": "^1.1.0",
-    "regexparam": "^1.3.0",
+    "regexparam": "^2.0.0",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
     "ava": "^3.8.2",
     "eslint": "^7.0.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
+    "husky": "^6.0.0",
     "nyc": "^15.0.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.3.0",
     "pretty-quick": "^3.0.1",
     "supertest": "^6.0.0"
   }
